# fascinating_compiler

./: README.md  dune-project  fascinating_compiler.opam
lib/analysis/: dune  semant.ml  semantic.ml  symbol_table.ml
lib/ast/: ast.ml  dune
lib/backend/: codegen.ml  dune  ir.ml  optimize.ml
lib/frontend/: dune  lexer.mll  parser.mly  token.ml
test/: dune  test_lexer.ml  test_parser.ml
